k8s/nodeapp-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: node-app
  name: node-app
  namespace: lti
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-app
  strategy:
   type: RollingUpdate
   rollingUpdate:
     maxUnavailable: 1
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
      - image: 8484810020/azuredevops:31
        name: nginx
        ports:
        - containerPort: 80
        imagePullPolicy: IfNotPresent
        resources: 
          limits:
            cpu: "100m"
            memory: 250Mi
          requests:
            cpu: "50m"
            memory: 150Mi
      imagePullSecrets:
      - name: dockerHubLogin
