k8s/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: lti
spec:
  selector:
    app: node-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
